# 2025_MA_CAPSTONE_704D_GRUPO_2

./: .gitignore  README.md
Fase 2/Evidencias Proyecto/API/: README.md  database.py  main.py  pyproject.toml
Fase 2/Evidencias Proyecto/API/crud/: producto_crud.py
Fase 2/Evidencias Proyecto/API/models/: estado_producto.py  producto.py
Fase 2/Evidencias Proyecto/Web/: .env.example  db.sqlite3  pyproject.toml
Fase 2/Evidencias Proyecto/Web/apps/: __init__.py
Fase 2/Evidencias Proyecto/Web/apps/carrito/: carrito.py  urls.py  views.py
Fase 2/Evidencias Proyecto/Web/apps/dashboard/: storage.py  views.py
Fase 2/Evidencias Proyecto/Web/apps/ventas/: apps.py  auth_backends.py  models.py  urls.py  views.py
Fase 2/Evidencias Proyecto/Web/apps/ventas/migrations/: 0002_categoria_clienteempresa_clientepersona_direccion_and_more.py  0003_alter_producto_table.py  0004_user.py
Fase 2/Evidencias Proyecto/Web/apps/ventas/templatetags/: image_tags.py
Fase 2/Evidencias Proyecto/Web/appsdjango/dashboard/: apps.py  urls.py  views.py
Fase 2/Evidencias Proyecto/Web/appsdjango/ventas/: apps.py
Fase 2/Evidencias Proyecto/Web/dashboard/: views.py
Fase 2/Evidencias Proyecto/Web/pets/: asgi.py  settings.py  urls.py  wsgi.py
Fase 2/Evidencias Proyecto/Web/static/css/: style.css
Fase 2/Evidencias Proyecto/Web/ventas/: models.py  urls.py  views.py
Fase 2/Evidencias Proyecto/Web/ventas/migrations/: 0001_initial.py
Fase 2/Evidencias Proyecto/Web/ventas/templates/ventas/: arena.html  base.html  carrito.html  catalogo.html  gato.html  index.html  perro.html  producto.html
(+66 files in other folders)
