[project]
name = "web-ecommerce-cordillerapets"
version = "0.0.1"
description = "Plataforma web eCommerce para Cordillera Pets"
authors = [
    {name = "Janiz Carreño",email = "jan.carreno@duocuc.cl"},
    {name = "Carolina Sanchez",email = "caro.sanchez@duocuc.cl"},
    {name = "Nicolás Rocha",email = "nico.rocha@duocuc.cl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<5.3)",
    "pillow (>=11.3.0,<12.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "django-bootstrap5 (>=25.2,<26.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "djhtml (>=3.0.10,<4.0.0)"
]
